--- a/package.json
+++ b/package.json
@@ -23,6 +23,8 @@
     "babel-plugin-import": "^1.8.0",
     "sass": "^1.18.0",
     "sass-loader": "^7.1.0",
+    "less": "^3.9.0",
+    "less-loader": "^5.0.0",
     "vue-cli-plugin-iview": "^1.0.6",
     "vue-template-compiler": "^2.6.10"
   },
