--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   },
   "dependencies": {
     "axios": "^0.19.0",
+    "clipboard": "^2.0.4",
     "core-js": "^2.6.5",
     "iview": "^3.4.2",
     "single-spa-vue": "^1.5.4",
